--- a/TMDT/Views/Books/Index.cshtml
+++ b/TMDT/Views/Books/Index.cshtml
@@ -388,5 +388,5 @@ else
     </script>
 }
 
-@Html.PagedListPager(Model, i => Url.Action("Index", "Books", new { i, search = Request.QueryString["search"] }))
+@Html.PagedListPager(Model, page => Url.Action("Index", "Books", new { page, search = Request.QueryString["search"] }))
 
