--- a/TMDT/Views/Books/Index.cshtml
+++ b/TMDT/Views/Books/Index.cshtml
@@ -362,7 +362,7 @@ else
             </div>
         </div>
     </div>
-@Html.PagedListPager(Model, i => Url.Action("Index", "Books", new { i, search = Request.QueryString["search"] }))
+@Html.PagedListPager(Model, page => Url.Action("Index", "Books", new { page, search = Request.QueryString["search"] }))
 }
 @section scripts{
     <script>
